fix career alignment

--- a/_sass/_page-career.scss
+++ b/_sass/_page-career.scss
@@ -44,6 +44,7 @@
     width: 40%;
 
     @include mq-mobile-only {
+        text-align: center;
         width: 100%;
     }
 }
@@ -78,6 +79,7 @@
     width: 20%;
 
     @include mq-mobile-only {
+        text-align: center;
         width: 100%;
     }
 }
